changed the way the events are sourced

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -29,6 +29,7 @@
     "password": "Password",
     "name": "Name",
     "confirmPassword": "Confirm Password",
+    "newPassword": "New Password",
     "loginTitle": "The Event Newsletter",
     "registerTitle": "The Event Newsletter",
     "loginFailed": "Login failed",
@@ -36,7 +37,25 @@
     "alreadyHaveAccount": "Already have an account?",
     "dontHaveAccount": "Don't have an account?",
     "signInHere": "Sign in here",
-    "createAccountHere": "Create account here"
+    "createAccountHere": "Create account here",
+    "forgotPassword": "Forgot Password",
+    "forgotPasswordQuestion": "Forgot your password?",
+    "resetPasswordHere": "Reset it here",
+    "forgotPasswordDescription": "Enter your email address and we'll send you a code to reset your password.",
+    "resetPassword": "Reset Password",
+    "resetCode": "Reset Code",
+    "enterResetCodeAndPassword": "Enter the code from your email and your new password.",
+    "sendResetCode": "Send Reset Code",
+    "resetCodeSent": "Reset code sent!",
+    "checkEmailForCode": "Check your email for a 6-digit code. It will expire in 15 minutes.",
+    "enterResetCode": "Enter reset code",
+    "passwordResetSuccess": "Password reset successfully!",
+    "redirectingToLogin": "Redirecting to login...",
+    "backToLogin": "Back to Login",
+    "rememberPassword": "Remember your password?",
+    "requestNewCode": "Request a new code",
+    "passwordsDoNotMatch": "Passwords do not match",
+    "passwordTooShort": "Password must be at least 8 characters"
   },
   "login": {
     "title": "Stay Connected to Local Events, Not Social Media",
