--- a/frontend/src/i18n/locales/ro.json
+++ b/frontend/src/i18n/locales/ro.json
@@ -29,6 +29,7 @@
     "password": "Parolă",
     "name": "Nume",
     "confirmPassword": "Confirmă parola",
+    "newPassword": "Parolă Nouă",
     "loginTitle": "Buletinul de Evenimente",
     "registerTitle": "Buletinul de Evenimente",
     "loginFailed": "Conectarea a eșuat",
@@ -36,7 +37,25 @@
     "alreadyHaveAccount": "Ai deja un cont?",
     "dontHaveAccount": "Nu ai cont?",
     "signInHere": "Conectează-te aici",
-    "createAccountHere": "Creează cont aici"
+    "createAccountHere": "Creează cont aici",
+    "forgotPassword": "Ai Uitat Parola",
+    "forgotPasswordQuestion": "Ai uitat parola?",
+    "resetPasswordHere": "Resetează-o aici",
+    "forgotPasswordDescription": "Introdu adresa ta de email și îți vom trimite un cod pentru a-ți reseta parola.",
+    "resetPassword": "Resetează Parola",
+    "resetCode": "Cod de Resetare",
+    "enterResetCodeAndPassword": "Introdu codul din email și noua ta parolă.",
+    "sendResetCode": "Trimite Cod de Resetare",
+    "resetCodeSent": "Codul de resetare a fost trimis!",
+    "checkEmailForCode": "Verifică emailul pentru un cod de 6 cifre. Va expira în 15 minute.",
+    "enterResetCode": "Introdu codul de resetare",
+    "passwordResetSuccess": "Parola a fost resetată cu succes!",
+    "redirectingToLogin": "Redirecționare către conectare...",
+    "backToLogin": "Înapoi la Conectare",
+    "rememberPassword": "Îți amintești parola?",
+    "requestNewCode": "Solicită un cod nou",
+    "passwordsDoNotMatch": "Parolele nu se potrivesc",
+    "passwordTooShort": "Parola trebuie să aibă cel puțin 8 caractere"
   },
   "login": {
     "title": "Rămâi Conectat la Evenimente Locale, Nu la Rețele Sociale",
