made some more changes

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -59,7 +59,7 @@
   },
   "login": {
     "title": "Stay Connected to Local Events, Not Social Media",
-    "description": "Get a curated weekly email with local events you'll actually want to attend—without the endless scrolling or needing to stay connected to social media.",
+    "description": "Weekly event newsletter. Curated by you.",
     "whyExists": "Why this exists:",
     "why1": "🚫 No social media browsing — avoid the dopamine trap of endless feeds",
     "why2": "📧 Weekly email only — intentional, not addictive. You get events for the month ahead, so you have time to plan",
