--- a/frontend/src/i18n/locales/ro.json
+++ b/frontend/src/i18n/locales/ro.json
@@ -59,7 +59,7 @@
   },
   "login": {
     "title": "Rămâi Conectat la Evenimente Locale, Nu la Rețele Sociale",
-    "description": "Primește un email săptămânal cu evenimente locale la care chiar vrei să participi—fără scroll-ul nesfârșit sau nevoia de a rămâne conectat la rețelele sociale.",
+    "description": "Buletin săptămânal de evenimente. Curat de tine.",
     "whyExists": "De ce există acest lucru:",
     "why1": "🚫 Fără navigare pe rețele sociale — evită capcana dopaminei din feed-urile nesfârșite",
     "why2": "📧 Doar email săptămânal — intenționat, nu adictiv. Primești evenimente pentru luna următoare, așa că ai timp să planifici",
